--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 50px 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,4 +14,19 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.navigation-bar {
+  margin: 20px 50px;
+  text-align: center;
+}
+
+.nav-item {
+  text-decoration: none;
+  background-color: rgb(231, 228, 228);
+  border: rgb(182, 182, 182) solid 2px;
+  color: black;
+  padding: 12px 20px;
+  margin: 20px;
+  border-radius: 5px;
 }
