--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,47 @@ code {
   height: 300px;
   background: lightcyan;
   border: 2px solid lightgrey;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .repo-card > img {
   width: 100px;
+}
+
+.playerInfoWrapper {
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.playerInfo {
+  height: 400px;
+  width: 300px;
+  border: 2px black solid;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.playerInfo > image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 2px black solid;
+}
+
+.playerInfo > button {
+  background-color: black;
+  border-radius: 10px;
+  text-align: center;
+  color: white;
+  padding: 10px 20px;
 }
