--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,15 @@ code {
   color: white;
   padding: 10px 20px;
 }
+
+.battle-btn {
+  display: block;
+  padding: 8px 20px;
+  margin: 30px auto;
+  background-color: blue;
+  border-radius: 10px;
+  color: white;
+  font-weight: bold;
+  border: none;
+  width: fit-content;
+}
